<resources>
    <string name="app_name">Calculator</string>
    <string name="menu_user">User</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>

    <string name="discloser_continue">Continue</string>

    <string name="login_login">Login</string>
    <string name="login_username">User name</string>
    <string name="login_password">Password</string>

    <string name="home_income">Set Income</string>
    <string name="home_liabilities">Set Liabilities</string>

    <string name="home_update">Update</string>

    <string name="user_saving">Savings</string>
    <string name="user_investment">Investment</string>
    <string name="user_more">More</string>
    <string name="user_mortgage">Mortgage</string>
    <string name="user_amount">Amount</string>
    <string name="user_period">Period</string>
    <string name="user_calculate">Calculators/ToolBox</string>
    <string name="user_setagoal">Set a Goal</string>

    <string name="setting_cuser">Change Username</string>
    <string name="setting_cpassword">Change Password</string>
    <string name="setting_discloser">Discloser</string>
    <string name="setting_logout">Log out</string>


</resources>