<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.UserHomeActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/userback"
                    android:gravity="center|left">
                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_40sdp"
                        app:cardCornerRadius="40dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_person_24"
                            app:tint="@color/major" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="User Name"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_calculate"
                        android:textColor="@color/major"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_saving"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_savings_24"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_saving"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_invest"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_business_center_24"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_investment"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_mort"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_home_24"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_mortgage"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_more"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/major"
                        android:drawableStart="@drawable/ic_baseline_add_circle_outline_24"
                        android:background="@drawable/button_background_outline_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_more"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/major"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_setagoal"
                        android:textColor="@color/major"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_amount"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_savings_24"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_amount"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_period"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_business_center_24"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/user_period"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:itemTextColor="@color/second"
        app:itemIconTint="@color/second"
        app:menu="@menu/navigationmenu"/>
</LinearLayout>