<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingHomeActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:src="@drawable/logo"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_person"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/setting_cuser"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_pass"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_lock"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/setting_cpassword"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_discloser"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_baseline_request_page"
                        android:background="@drawable/button_background_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/setting_discloser"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_logout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:textColor="@color/major"
                        android:background="@drawable/button_background_outline_major"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/setting_logout"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:itemTextColor="@color/second"
        app:itemIconTint="@color/second"
        app:menu="@menu/navigationmenu"/>

</LinearLayout>